--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -334,6 +334,13 @@ button {
   margin-right: 0.6rem;
 }
 
+.navbar img {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+}
+
 /* Landing Page */
 .landing {
   position: relative;
